Add complete iteration 8

--- a/app/views/partials/_payload_stats.erb
+++ b/app/views/partials/_payload_stats.erb
@@ -3,3 +3,4 @@
 <%= erb :'partials/_user_agents' %>
 <%= erb :'partials/_resolutions' %>
 <%= erb :'partials/_urls' %>
+<%= erb :'partials/_events' %>
