--- a/app/views/no_payload_for_path.erb
+++ b/app/views/no_payload_for_path.erb
@@ -1,5 +1,8 @@
+<body>
+<%= erb :'partials/_nav_bar' %>
 <div class="jumbotron text-center">
   <h1><%= "#{params[:client]}" %></h1>
 </div>
 
   <h3><%= "No payload data has been received for #{params[:relative_path]}" %></h3>
+</body>
